// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Form component Render icon 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control has-icons-left is-clearfix"><input type="date" autocomplete="on" value="" class="input"> <span class="icon is-left"><i class="fa fa-user"></i></span>
<!---->
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Date Form component Render invisible condition is false 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="date" autocomplete="on" value="2017-07-04" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Date Form component Render invisible condition is true 1`] = `<div data-server-rendered="true"></div>`;

exports[`Date Form component Render invisible is True 1`] = `<div data-server-rendered="true"></div>`;

exports[`Date Form component Render invisible is false 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="date" autocomplete="on" value="2017-07-04" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Date Form component Render label 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">The label</label> <div class="control is-clearfix"><input type="date" autocomplete="on" value="2017-07-04" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Date Form component Render max (ko) 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="date" autocomplete="on" min="2017-07-03" value="2017-07-04" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Date Form component Render max (ok) 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="date" autocomplete="on" max="2017-07-05" value="2017-07-04" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Date Form component Render min (ko) 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="date" autocomplete="on" min="2017-07-05" value="2017-07-04" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Date Form component Render min (ok) 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="date" autocomplete="on" min="2017-07-03" value="2017-07-04" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Date Form component Render mode readonly by config 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span> July 4, 2017 </span>
<!---->
</div>
</span>
`;

exports[`Date Form component Render mode readonly conditional param 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span> July 4, 2017 </span>
<!---->
</div>
</span>
`;

exports[`Date Form component Render mode readonly param 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span> July 4, 2017 </span>
<!---->
</div>
</span>
`;

exports[`Date Form component Render required 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control has-icons-right is-clearfix"><input type="date" autocomplete="on" value="2017-07-04" class="input is-info"> <!----> <span class="icon is-right is-info"><i class="fa fa-info-circle"></i></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Date Form component Render required conditionnal 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control has-icons-right is-clearfix"><input type="date" autocomplete="on" value="2017-07-04" class="input is-info"> <!----> <span class="icon is-right is-info"><i class="fa fa-info-circle"></i></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Date Form component Render required without value 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control has-icons-right"><input type="date" autocomplete="on" value="" class="input is-danger"> <!----> <span class="icon is-right is-danger"><i class="fa fa-exclamation-circle"></i></span>
<!---->
</div>
<p class="help is-danger">this field is required</p>
</div>
</span>
`;

exports[`Date Form component Render tooltip left 1`] = `<span data-label="The left tooltip" data-server-rendered="true" class="tooltip is-primary is-left is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="date" autocomplete="on" value="2017-07-04" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Date Form component Render tooltip up 1`] = `<span data-label="The tooltip" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="date" autocomplete="on" value="2017-07-04" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Date Form component Render with data 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="date" autocomplete="on" value="2017-07-04" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Date Form component Render without data 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="date" autocomplete="on" value="" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Date Thumbnail component Render invisible condition is false 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <span> July 4, 2017 </span>
<!---->
</div>
</span>
`;

exports[`Date Thumbnail component Render invisible condition is true 1`] = `<div data-server-rendered="true"></div>`;

exports[`Date Thumbnail component Render invisible is True 1`] = `<div data-server-rendered="true"></div>`;

exports[`Date Thumbnail component Render invisible is false 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <span> July 4, 2017 </span>
<!---->
</div>
</span>
`;

exports[`Date Thumbnail component Render label 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">The label</label> <span> July 4, 2017 </span>
<!---->
</div>
</span>
`;

exports[`Date Thumbnail component Render tooltip left 1`] = `
<span data-label="The left tooltip" data-server-rendered="true" class="tooltip is-primary is-left is-medium"><div class="field" style="width:inherit;"><!----> <span> July 4, 2017 </span>
<!---->
</div>
</span>
`;

exports[`Date Thumbnail component Render tooltip up 1`] = `
<span data-label="The tooltip" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <span> July 4, 2017 </span>
<!---->
</div>
</span>
`;

exports[`Date Thumbnail component Render with data 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <span> July 4, 2017 </span>
<!---->
</div>
</span>
`;

exports[`Date Thumbnail component Render without data 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <span>  </span>
<!---->
</div>
</span>
`;

exports[`Date list component Render invisible condition is false 1`] = `<span data-server-rendered="true">July 4, 2017</span>`;

exports[`Date list component Render invisible condition is true 1`] = `<span data-server-rendered="true"></span>`;

exports[`Date list component Render invisible is True 1`] = `<span data-server-rendered="true"></span>`;

exports[`Date list component Render invisible is false 1`] = `<span data-server-rendered="true">July 4, 2017</span>`;

exports[`Date list component Render with data 1`] = `<span data-server-rendered="true">July 4, 2017</span>`;

exports[`Date list component Render without data 1`] = `<span data-server-rendered="true"></span>`;
